@@ -403,7 +403,11 @@ ipsec       net        0.0.0.0/0</programlisting>
     zones and add and delete remote endpoints dynamically using
     /sbin/shorewall. With Shorewall 2.0.2 Beta 1 and later versions, this
     capability must be enabled by setting DYNAMIC_ZONES=Yes in <ulink
-    url="manpages/shorewall.conf.html">shorewall.conf</ulink>.</para>
+    url="manpages/shorewall.conf.html">shorewall.conf</ulink>.<important>
+        <para>DYNAMIC_ZONES=Yes is not supported by Shorewall-perl 4.2.0 or
+        later versions. Use <ulink url="ipsets.html#Dynamic">dynamic zones
+        defined by ipsets</ulink> instead.</para>
+      </important></para>
 
     <para>In /etc/shorewall/zones:</para>
 
