@@ -482,6 +482,9 @@
           role="bold">yes</emphasis>, enables dynamic zones. DYNAMIC_ZONES=Yes
           is not allowed in configurations that will run under Shorewall
           Lite.</para>
+
+          <para>DYNAMIC_ZONES=Yes is not supported by Shorewall-perl 4.2.0 and
+          later.</para>
         </listitem>
       </varlistentry>
 
