@@ -75,6 +75,9 @@ Migration Issues.
     Note that there is a new 'Rfc1918' macro that acts on addresses
     reserved by RFC 1918.
 
+7)  DYNAMIC_ZONES=Yes is no longer supported by Shorewall-perl. Use
+    ipset-based zones instead.
+
 Problems Corrected in Shorewall 4.2.0 Beta 2
 
 1) When 'norfc1918' was specified on an interface with an RFC 1918 IP
@@ -118,7 +121,9 @@ Other Changes in Shoreall 4.2.0 Beta 2.
    column names one of the Netfilter protocol 'helper' module sets
    (ftp, sip, amanda, etc).
 
-   See http://www.shorewall.net/traffic_shaping.htm for an example. 
+   See http://www.shorewall.net/traffic_shaping.htm for an example.
+
+3) DYNAMIC_ZONES=Yes is no longer supported by Shorewall-perl.
     
 None.
 
