@@ -6,6 +6,8 @@ Changes in 4.2.0-Beta2
 
 3)  HELPER column in tcrules.
 
+4)  De-implement DYNAMIC_ZONES=Yes in Shorewall-perl.
+
 Changes in 4.2.0-Beta1
 
 1)  Fix handling of firewall marks.
